Fixed Jumpy Icons

--- a/app/skins/_common/css/cms.css
+++ b/app/skins/_common/css/cms.css
@@ -168,56 +168,6 @@ li.whitefolder {
 }
 
 
-/** control panel settings **/
-#cpanel div.icon {
-    border: 1px solid #A0A0A0;
-    height: 97px;
-    width: 108px;
-    text-align: center;
-    font-size: 95%;
-    line-height: 97%;
-    margin-right: 5px;
-    float: left;
-    margin-bottom: 5px;
-}
-
-#cpanel div.icon a {
-    display: block;
-    float: left;
-    border: 1px solid #f0f0f0;
-    line-height: 100%;
-    height: 97px;
-    width: 108px;
-    vertical-align: middle;
-    text-decoration: none;
-}
-
-
-
-#cpanel div.icon a:hover {
-    border-left: 1px solid #eee;
-    border-top: 1px solid #eee;
-    border-right: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    background: #f9f9f9;
-}
-
-#cpanel img  { padding: 8px 0; margin: 0 auto; }
-
-#cpanel span { display: block; text-align: center; }
-
-
-
-
-
-
-
-
-
-
-
-
-
 /** Icon + text div links **/
 
 .smallicon {
